# rtos

./: CLI.md  CMAKE.md  README.md  SETUP.md  SYLLABUS.md  backup-proposal.md  learning-objectives.dot  proposal.md
00.timecard/: 2023-05-12.md
02.rtos/: 00.course-plan.md  00.objectives.md  00.resources.md  learning-objectives.dot
02.rtos/labs/: 0.environment.md  1.rtos.md
02.rtos/slides/: 00.introduction.md
03.os/: 00.objectives.md  00.resources.md
labs/: action-template.yml  gitignore-base
labs/0.environment/: README.md  test.c
labs/00.environment/: README.md  hello_world.resc  main.c  rpi_pico_rp2040_w.repl
labs/01.makefiles/: README.md
labs/02.testing/: README.md  blink.c  test.c  unity_config.c  unity_config.h
labs/03.threads/: README.md  threads.c
labs/04.signaling/: CMakeLists.txt  README.md  fifo.h  signaling.h  test_fifo.c  test_signal.c
labs/04.signaling/reference/: test.repl
labs/04.signaling/reference/lib/lab/include/: fifo.h
labs/04.signaling/reference/test/test_fifo/: test_fifo.c
labs/04.signaling/reference/test/test_semaphore/: test_signal.c
labs/05.realtime/: README.md  gpio_interrupt.c  rtc.c  sleep.c  task_delay.c  timer.c
labs/06.scheduling/: README.md
labs/08.can/: README.md  can.c
labs/09.verification/: README.md  example.dot
labs/1.rtos/: README.md
labs/1.testing/: README.md  blink.c
labs/10.power/: README.md
labs/11.bluetooth/: README.md
labs/2.mocking/: README.md  main.c  map.h  mocking.c  mocking.h  (+4 more)
renode/: rp2040_divider.py  rp2040_spinlock.py  rpi_pico_rp2040_w.dts  rpi_pico_rp2040_w.repl
(+101 files in other folders)
